# aider-mokumoku

./: README.md  pyproject.toml
src/aider_mokumoku/: __init__.py
